Zapis Uzytkownika po rejestracji w Keycloak